# pcb

./: ...  .cvsignore  .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-GTK_PORT  README.cvs  README.cvs_branches  README.git  README.ppa  README.snapshots  README.w32  README.win32  README.win64  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  globalconst.h  icon-theme-installer  index.html  pcb-layertypes.patch
data/: .gitignore  Makefile.am  README  pcb.appdata.xml  pcb.appdata.xml.in  pcb.desktop.in  pcb.xml.in  regen_files  x-excellon.desktop.in  x-gerber.desktop.in  x-pcb-footprint.desktop.in  x-pcb-layout.desktop.in  x-pcb-netlist.desktop.in
data/html/: Makefile.am  footprints.js
doc/: .gitignore  555.symdef  Imakefile  Makefile.am  Makefile.in  Makefile.inc  Xdefaults.tgif  actions.texi  ascii2texi.awk  database.txt  debumpify.out.eps  debumpify.out.pcb  debumpify.pcb  eps2png  extract-docs  fb-blinker-sch.sch  fb-blinker.prj  fb-blinker.texi  fb-led.pcb  fb-led.texi  fb-smt-sch.sch  fb-smt.net  fb-smt.pcb  fb-smt.prj  firstboard.texi  fractional_size.tab  fractional_size.texi  gcode.pcb  gcode_control_img.eps  gcode_tool_path.eps  gs.texi  gschemrc  installation.texi  keepouts.txt  letter_size.tab  letter_size.texi  mdate-sh  metric_size.tab  metric_size.texi  miter.eps  (+43 more)
doc/doxygen/: README.ppa  branches.html  create_pcb_dox.sh  pcb-launchpad-ppa.html  pcb-main.txt  pcb-releases.html  pcb.dox  what-is-pcb.html  win32_MinGW.html  win32_cygwin.html
doc/gs/: .gitignore  555.eps  555.sym  Makefile.am  Makefile.inc  fb-blinker-1.eps  fb-blinker-10.eps  fb-blinker-11.eps  fb-blinker-12.eps  fb-blinker-13.eps  fb-blinker-14.eps  fb-blinker-15.eps  fb-blinker-16.eps  fb-blinker-17.eps  fb-blinker-18.eps  fb-blinker-2.eps  fb-blinker-3.eps  fb-blinker-4.eps  fb-blinker-5.eps  fb-blinker-6.eps  fb-blinker-7.eps  fb-blinker-8.eps  fb-blinker-9.eps  fb-blinker-sch.eps  fb-blinker.net  fb-blinker.pcb  fb-blinker.texi  fb-blinker_auto.pcb  fb-blinker_auto_miter.pcb  fb-blinker_auto_miter_teardrops.pcb  fb-blinker_auto_optimize.pcb  fb-blinker_auto_optimize_teardrops.pcb  fb-blinker_parts.pcb  fb-blinker_topo.pcb  fb-blinker_topo_teardrops.pcb  fb-led-1.eps  fb-led-10.eps  fb-led-11.eps  fb-led-12.eps  fb-led-14.eps  (+86 more)
doc/ideas/: database.txt  keepouts.txt
doc/pt_BR/: gs-pt_BR.texi  terminology-pt_BR.texi
example/OSHW/: Makefile.am  README  oshw-logo.pcb  oshw-logo_L_fill.pcb  oshw-logo_L_nofill.pcb  oshw-logo_M_fill.pcb  oshw-logo_M_nofill.pcb  oshw-logo_S_fill.pcb  oshw-logo_S_nofill.pcb  oshw-logo_XL_fill.pcb  oshw-logo_XL_nofill.pcb  oshw-logo_XXL_fill.pcb  oshw-logo_XXL_nofill.pcb
gts/: .gitignore  Makefile.am  boolean.c  cdt.c  edge.c  eheap.c  gts.def  gts.h  matrix.c  misc.c  partition.c  predicates.c  predicates_init  refine.c  split.c  surface.c  vopt.c
lib/: .gitignore  CreateLibrary.sh.in  CreateLibrary.sh.raw  CreateLibraryContents.sh.in  CreateLibraryContents.sh.raw  Imakefile  ListLibraryContents.sh  ListLibraryContents.sh.in  Makefile.am  Makefile.in  QueryLibrary.sh.in  QueryLibrary.sh.raw  README-m4libs  TTL_74xx_DIL.list  TTL_74xx_DIL.m4  amp.inc  amphenol.inc  amphenol.list  amphenol.m4  aries.inc  bga.inc  bourns.inc  candk.inc  common.m4  connector.inc  connector.list  connector.m4  crystal.list  crystal.m4  cts.inc  dil.inc  footprint.pcb  geda.inc  geda.list  geda.m4  gen_geda_list.awk  gen_geda_m4.awk  gen_list.awk  gen_m4.awk  generic.list  (+57 more)
models-scad/: CAP0603.scad  CAP0805.scad  DIP14.scad  DIP16-simple.scad  DIP16.scad  DIP18.scad  DIP20.scad  DIP22.scad  DIP22M.scad  DIP24.scad  DIP24M.scad  DIP24N.scad  DIP28.scad  DIP28N.scad  DIP32.scad  DIP40.scad  DIP48.scad  DIP64.scad  DIP8.scad  DIPSOCKET14.scad  DIPSOCKET16.scad  DIPSOCKET18.scad  DIPSOCKET20.scad  DIPSOCKET22.scad  DIPSOCKET22M.scad  DIPSOCKET24.scad  DIPSOCKET24M.scad  DIPSOCKET24N.scad  DIPSOCKET28.scad  DIPSOCKET28N.scad  DIPSOCKET32.scad  DIPSOCKET40.scad  DIPSOCKET48.scad  DIPSOCKET64.scad  DIPSOCKET8.scad  LCD1601.scad  LCD1602.scad  LCD2004.scad  LCD4002.scad  LCD4004.scad  (+7 more)
models-scad/proto/: Makefile.am  axial-cp.scad  axial-d.scad  axial-r.scad  chip-c.scad  chip-l.scad  chip-r.scad  dip.scad  dipsocket.scad  lcd_module.scad  qfp.scad  soic.scad  sot.scad
models-scad/stl/: LCD1601.stl
newlib/not_vetted_ingo/: Makefile.am  Makefile.in  pc104+.ele  pc104.ele  pq128.ele  pq144.ele  pq160.ele  pq208.ele  pq304.ele  pq32.ele  pq44.ele  smt0402.ele  smt0603.ele  smt0805.ele  smt1206.ele  smt1210.ele  smt1913.ele  smt2416.ele
scripts/: CreateLibrary.sh  CreateLibraryContents.sh  Makefile.am  QueryLibrary.sh  build.sh  dir2html.sh  index.html  install_autoconf.sh  install_geda_gaf.sh  install_gerbv.sh  install_gettext.sh  install_guile.sh  m4_create_static_lib.sh  png_diff.sh
src/: .cvsignore  .gitignore  .output.h.swp  1.grb  2.grb  3.grb  4.grb  5.grb  CreateSedScript.sh  Imakefile  Makefile.am  Makefile.in  Pcb.ad.in  Pcb.ad.raw  Pcb.ad.small  action.c  action.h  actionlist.c  ascii-printf.c  ascii-printf.h  autoplace.c  autoplace.h  autoroute.c  autoroute.h  backtrace.c  backtrace.h  box.h  breakout.c  breakout.h  buffer.c  buffer.h  change.c  change.h  check_icon.data  clip.c  clip.h  cmask.grb  command.c  command.h  compat.c  (+209 more)
src/borast/: README  borast-bentley-ottmann.c  borast-combsort-private.h  borast-compiler-private.h  (+13 more)
stdlib/: .gitignore  Makefile.am  stdlib.html  stdlibf.html
tests/: .gitignore  Makefile.am  README.txt  run_tests.sh  tests.list
tools/: Makefile.am  Makefile.in  MergePCBPS  Merge_dimPCBPS  PCB2HPGL  gerbertotk.c  gnet-pcbfwd.scm  gnet-pcblf.scm  pcb2ncap.tgz  pcb_blink  pcbdiff  tgo2pcb.tcl
venlib/: Makefile.am  venlib.html  venlibf.html
w32/: .gitignore  Makefile.am  README  Readme.txt.in  build-all.sh  build-installer.sh  minipack.conf  mpk  pcb.nsi.in
win32/: .gitignore  Makefile.am  Makefile.in  Readme.txt  Xdefaults.tgif  build_pcb  config.mk  extract_gtk_win32  mingw_required_pkgs  pcb-win32-deps.mk  pcb.nsi.in  registerExtension.nsh  setup_deps
(+2213 files in other folders)
